--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ contourpy==1.2.1
 cycler==0.12.1
 dj-database-url==2.1.0
 Django==5.0.4
+django-redis==5.4.0
 fonttools==4.51.0
 frozendict==2.4.1
 h11==0.14.0
@@ -17,6 +18,7 @@ idna==3.6
 kiwisolver==1.4.5
 lxml==5.2.1
 matplotlib==3.8.4
+mock==5.1.0
 multitasking==0.0.11
 nose==1.3.7
 nose2==0.14.1
@@ -30,6 +32,7 @@ pyparsing==3.1.2
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
 pytz==2024.1
+redis==5.0.4
 requests==2.31.0
 selenium==4.19.0
 six==1.16.0
